some parallax scrolling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="game"></div>
     <div id="sprites">
-        <img src="F5S4.png"><img src="lV188RB.jpg">
+        <img src="F5S4.png"><img src="lV188RB.jpg"><img src="CepheusB_Spitzer_14391.jpg">
     </div>
     <script src="index.js"></script>
 </body>
