--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="assets/style/index.css">
 </head>
 <body>
     <div id="game"></div>
     <div id="sprites">
-        <img src="F5S4.png"><img src="lV188RB.jpg"><img src="CepheusB_Spitzer_14391.jpg">
+        <img src="assets/images/F5S4.png">
+        <img src="assets/images/lV188RB.jpg">
+        <img src="assets/images/CepheusB_Spitzer_14391.jpg">
     </div>
     <script src="index.js"></script>
 </body>
