--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link rel="stylesheet" href="assets/style/index.css">
-</head>
-<body>
-    <div id="game"></div>
-    <div id="sprites">
-        <img src="assets/images/F5S4.png">
-        <img src="assets/images/lV188RB.jpg">
-        <img src="assets/images/CepheusB_Spitzer_14391.jpg">
+    <link rel="stylesheet" href="assets/style/index.css" />
+  </head>
+  <body>
+    <div id="game">
     </div>
-    <script src="index.js"></script>
-</body>
+    <!-- <div id="loadingScreen">
+      <div>Loading, please wait...</div>
+      <div><img src="assets/images/Spinner-1s-200px.svg" /></div>
+    </div> -->
+    <div id="sprites">
+      <img src="assets/images/F5S4.png" />
+      <img src="assets/images/lV188RB.jpg" />
+      <img src="assets/images/CepheusB_Spitzer_14391.jpg" />
+    </div>
+    <script src="assets/js/index.js"></script>
+  </body>
 </html>
