--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
     <link rel="stylesheet" href="assets/style/index.css" />
   </head>
   <body>
+        <div id="sprites">
+                <img src="assets/images/F5S4.png" />
+                <img src="assets/images/lV188RB.jpg" />
+                <img src="assets/images/CepheusB_Spitzer_14391.jpg" />
+              </div>
     <div id="game">
     </div>
-    <!-- <div id="loadingScreen">
+    <div id="loadingScreen">
       <div>Loading, please wait...</div>
       <div><img src="assets/images/Spinner-1s-200px.svg" /></div>
-    </div> -->
-    <div id="sprites">
-      <img src="assets/images/F5S4.png" />
-      <img src="assets/images/lV188RB.jpg" />
-      <img src="assets/images/CepheusB_Spitzer_14391.jpg" />
     </div>
+
     <script src="assets/js/index.js"></script>
   </body>
 </html>
