--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
       <div><img src="assets/images/Spinner-1s-200px.svg" /></div>
     </div>
 
-    <script src="dist/main.js"></script>
+    <script src="assets/js/index.js"></script>
   </body>
 </html>
