add bounding boxes for ship and enemies

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <img src="assets/images/F5S4.png" />
       <img src="assets/images/lV188RB.jpg" />
       <img src="assets/images/CepheusB_Spitzer_14391.jpg" />
+      <img src="assets/images/blueship4.png">
     </div>
     <div id="game"></div>
     <div id="loadingScreen">
