add a win screen

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       <div>Loading, please wait...</div>
       <div><img src="assets/images/Spinner-1s-200px.svg" /></div>
     </div>
+    <div id="winScreen">
+      <div>You Win!</div>
+      <div><img src="assets/images/Spinner-1s-200px.svg" /></div>
+    </div>
 
     <script src="assets/js/index.js"></script>
   </body>
