--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img src="assets/images/F5S4.png" />
       <img src="assets/images/lV188RB.jpg" />
       <img src="assets/images/CepheusB_Spitzer_14391.jpg" />
-      <img src="assets/images/blueship4.png">
+      <img src="assets/images/blueship4.png" />
     </div>
     <div id="game"></div>
     <div id="loadingScreen">
@@ -22,6 +22,11 @@
     <div id="winScreen">
       <div>You Win!</div>
       <div><img src="assets/images/Spinner-1s-200px.svg" /></div>
+    </div>
+    <div id="instructions">
+      <div>Up, Down, Left, Right Arrows to move</div>
+      <div>Space to fire</div>
+      <div>Esc to reset</div>
     </div>
 
     <script src="assets/js/index.js"></script>
