add enemy hit and lose screen

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       <div>You Win!</div>
       <div><img src="assets/images/Spinner-1s-200px.svg" /></div>
     </div>
+    <div id="loseScreen">
+      <div>You Lose!</div>
+      <div><img src="assets/images/Spinner-1s-200px.svg" /></div>
+    </div>
     <div id="instructions">
       <div>Up, Down, Left, Right Arrows to move</div>
       <div>Space to fire</div>
