add a start/stop

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <div><img src="assets/images/Spinner-1s-200px.svg" /></div>
     </div>
     <div id="instructions">
+      <div>Enter to start</div>
       <div>Up, Down, Left, Right Arrows to move</div>
       <div>Space to fire</div>
       <div>Esc to reset</div>
