start of debug settings

--- a/index.html
+++ b/index.html
@@ -34,11 +34,17 @@
           <div>Press Enter to start...</div>
         </div>
       </div>
+      <div id="sidebar">
       <div id="instructions">
         <div>Enter to start</div>
         <div>Up, Down, Left, Right Arrows to move</div>
         <div>Space to fire</div>
         <div>Esc to reset</div>
+      </div>
+      <div id="debugSettings">
+          <div>DebugSettings</div>
+          <div>MovementUnit: <input type="number" id="debugMovementUnit" value=""></div>
+        </div>
       </div>
     </div>
     <script src="assets/js/index.js"></script>
