--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
         </div>
       </div>
     </div>
-    <script src="assets/js/index.js"></script>
+    <script src="src/index.js"></script>
   </body>
 </html>
